# ChangeLog for media-libs/quicktime4linux
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/quicktime4linux/ChangeLog,v 1.18 2003/10/02 15:57:01 vapier Exp $

*quicktime4linux-2.0.0-r1 (02 Oct 2003)

  02 Oct 2003; Mike Frysinger <vapier@gentoo.org> :
  Use external libraries for the most part #25574.  Also add
  a gcc2 patch so the thing will compile ;).

*quicktime4linux-2.0.0 (02 Sep 2003)

  02 Sep 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*quicktime4linux-1.6.2 (26 Jul 2003)

  06 Aug 2003; Mike Frysinger <vapier@gentoo.org> :
  Add ppc filter for gcc flag and add -I for #25574.

  26 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + NPTL happy header patches.

*quicktime4linux-1.5.5-r1 (13 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  13 Jun 2003; Seemant Kulleen <seemant@gentoo.org>
  quicktime4linux-1.5.5-r1.ebuild:
  block libquicktime specifically

  13 Jun 2003; Seemant Kulleen <seemant@gentoo.org>
  quicktime4linux-1.5.5-r1.ebuild:
  blocks virtual/quicktime, which libquicktime installs, closing bug #20709 by
  Patrick Kursawe <phosphan@gentoo.org>

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*quicktime4linux-1.5.5 (24 May 2002)

  19 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> quicktime4linux-1.5.5-r1 :

  Added ppc to KEYWORDS.

  01 Sep 2002; Seemant Kulleen <seemant@gentoo.org> quicktime4linux-1.5.5-r1 :

  Added libpng as a dependency.  Thanks to twanger@bluetwanger.de (Markus
  Bertheau) in bug #7300.

  26 Jul 2002; Daniel Ahlberg <aliz@gentoo.org> quicktime4linux-1.5.5-r1 :

  Closes #5588 and hopefully #4702 later. Contributions from Fredrik Jagenheim 
  <humming@pobox.com>, Johannes Findeisen <you@hanez.org>
  and Eivind Tagseth <eivindt-gentoo@multinet.no>, thanks!

  24 May 2002; Seemant Kulleen <seemant@gentoo.org>