@@ -1,16 +1,16 @@
-MD5 108d3e9d9e220d8415e069fb6232eeea files/quicktime_makefile.patch 420
+MD5 63cd5e7109076fd9a3795efc2fcfa924 ChangeLog 3109
+MD5 02936418fc3b3848cb9b4eb7dda34d80 quicktime4linux-1.5.5-r1.ebuild 887
+MD5 0e179dec7bc055fda4f428d9daccbe7b quicktime4linux-1.6.2.ebuild 1124
+MD5 0790210ff1bf0b54b3739b29d7c835e7 quicktime4linux-2.0.0.ebuild 1127
+MD5 095e95d1b24f5b4fc71174410ba1e554 quicktime4linux-2.0.0-r1.ebuild 1347
+MD5 18f6f22f1a711f5be21eed00582cf61e files/1.6.2-gentoo-libmpeg3.patch 647
+MD5 947ef42daabc28f6c58cbccd4f7bb911 files/1.6.2-gentoo-sharedlib.patch 1072
+MD5 cff036b41967a42ea65b3eef0002f4a0 files/2.0.0-gentoo-libmpeg3.patch 663
+MD5 7181d651d366d5e7a27d576bbf5d0230 files/2.0.0-gentoo-sharedlib.patch 969
+MD5 c46fd893f3945688c806226477501585 files/digest-quicktime4linux-1.5.5-r1 74
 MD5 856fdf26d3cf2a72a72147c73f14a2c9 files/digest-quicktime4linux-1.6.2 150
 MD5 05a81d2da899448b5ec3b5bbf23b6f2d files/digest-quicktime4linux-2.0.0 79
+MD5 108d3e9d9e220d8415e069fb6232eeea files/quicktime_makefile.patch 420
 MD5 e55c3522c5ee09ecdc22287cb4d80539 files/2.0.0-external-libs.patch 1644
-MD5 c46fd893f3945688c806226477501585 files/digest-quicktime4linux-1.5.5-r1 74
 MD5 ae2802be07e21795df874c1d65cbe021 files/2.0.0-gcc2.patch 1007
-MD5 cff036b41967a42ea65b3eef0002f4a0 files/2.0.0-gentoo-libmpeg3.patch 663
-MD5 18f6f22f1a711f5be21eed00582cf61e files/1.6.2-gentoo-libmpeg3.patch 647
 MD5 05a81d2da899448b5ec3b5bbf23b6f2d files/digest-quicktime4linux-2.0.0-r1 79
-MD5 947ef42daabc28f6c58cbccd4f7bb911 files/1.6.2-gentoo-sharedlib.patch 1072
-MD5 7181d651d366d5e7a27d576bbf5d0230 files/2.0.0-gentoo-sharedlib.patch 969
-MD5 0ed1b908795a9624a417e0d7afd413e4 quicktime4linux-1.6.2.ebuild 1123
-MD5 9d5d29649047e45a1f155063c1cea869 quicktime4linux-1.5.5-r1.ebuild 886
-MD5 158601abb395e0ebde15aed8bbc5351b quicktime4linux-2.0.0.ebuild 1124
-MD5 ce996d59dc39c50ea8f35857c548cd18 quicktime4linux-2.0.0-r1.ebuild 1335
-MD5 11da92db1d080b1b11468bbb7eb5ab8d ChangeLog 2872
